Do not recreate cache dir, delete and recreate log dir

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,7 +13,7 @@ pipelines:
             - echo "Updating production server"
             - apt-get update
             - git ftp push --force --user $FTP_USER --passwd $FTP_PASSWD ftpes://$FTP_SERVER
-            - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER,$FTP_PASSWD $FTP_SERVER
+            - lftp -e 'rm -r /tmp/cache; rm -r /log; mkdir -p /log; bye' -u $FTP_USER,$FTP_PASSWD $FTP_SERVER
             - echo "Production server updated"
     testing:
       - step:
@@ -21,7 +21,7 @@ pipelines:
             - echo "Updating testing server"
             - apt-get update
             - git ftp push --force --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://$FTP_SERVER_TEST
-            - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
+            - lftp -e 'rm -r /tmp/cache; rm -r /log; mkdir -p /log; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
             - echo "Testing server updated"
   custom:
       init_production:
@@ -29,11 +29,11 @@ pipelines:
             script:
               - apt-get update
               - git ftp init --user $FTP_USER --passwd $FTP_PASSWD ftpes://$FTP_SERVER
-              - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER,$FTP_PASSWD $FTP_SERVER
+              - lftp -e 'rm -r /tmp/cache; rm -r /log; mkdir -p /log; bye' -u $FTP_USER,$FTP_PASSWD $FTP_SERVER
 
       init_testing:
         - step:
             script:
               - apt-get update
               - git ftp init --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://$FTP_SERVER_TEST
-              - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
+              - lftp -e 'rm -r /tmp/cache; rm -r /log; mkdir -p /log; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
