Thumb cron was moved to Cron module

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -40,7 +40,7 @@ parameters:
 		- Drive:default
 		- People:update
 		- Idoklad:update
-		- :Photo:Thumbs:default
+		- Thumbs:default
 
 
 application:
