--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
 		"malcanek/iDoklad-v2": "dev-master",
 		"contributte/recaptcha": "^3.1",
 		"nextras/datagrid": "^3.0",
-		"mk-j/php_xlsxwriter": "^0.37.0"
+		"mk-j/php_xlsxwriter": "^0.37.0",
+		"tmw/fpdm": "^2.9"
 	},
 	"require-dev": {
 	  "nette/tester": "^2.0",
