Add texylaJsFactory, because testbench dont have access to WWW_DIR constant used in texylaComponent, www dir is now part of service confing

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -125,6 +125,8 @@ services:
 
 	- App\PhotoModule\ImageService(%gallery.albumDir%, %gallery.thumbDir%, %appDir%/../www/subdom/photo)
 
+	- App\MemberModule\Components\TexylaJsFactory(%appDir%/../www/subdom/member)
+
 	- App\CronModule\Presenters\TaskerPresenter(%cron%)
 	- App\CronModule\Presenters\MessagePresenter(%mail%, %messenger%)
 
