Add dir to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,5 @@ www/vzsjablonec/albums/
 www/vzsjablonec/archive.zip
 www/vzsjablonec/doc/
 www/vzsjablonec/img/photos/
+www/vzsjablonec/img/upload/
 www/vzsjablonec/texyla/temp/
