First draft of new BillingControl component

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -121,6 +121,7 @@ services:
 	- App\Model\IdokladService(%idoklad.credentialsFile%)
 	- App\Model\AnketyService
 	- App\Model\RatingService
+	- App\Model\BillingService
 	- App\Model\MessageService
 	- App\Model\HlasovaniService
 	- App\Model\GalleryService
