--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
 		"php": ">= 7.0",
 	  	"ext-openssl": "*",
 	  	"ext-imagick": "*",
+	  	"ext-curl": "*",
+	  	"ext-zip": "*",
 		"nette/application": "^2.4",
 		"nette/bootstrap": "^2.4.2",
 		"nette/caching": "^2.5",
