--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
 		"tedivm/stash": "^0.14.2",
 		"kertz/twitteroauth": "dev-master",
 		"venca-x/social-login": "^1.0",
-		"malcanek/iDoklad-v2": "dev-master",
+		"malcanek/idoklad-v2": "dev-master",
 		"contributte/recaptcha": "^3.1",
 		"nextras/datagrid": "^3.0",
 		"mk-j/php_xlsxwriter": "^0.37.0",
