Change testing pipeline to deploy to VPS

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,8 +20,7 @@ pipelines:
           script:
             - echo "Updating testing server"
             - apt-get update
-            - git ftp push --force --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://$FTP_SERVER_TEST
-            - lftp -e 'rm -r /tmp/cache; rm -r /log; mkdir -p /log; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
+            - ssh $SSH_USER_TEST@$SSH_SERVER_TEST
             - echo "Testing server updated"
   custom:
       init_production:
@@ -30,10 +29,3 @@ pipelines:
               - apt-get update
               - git ftp init --user $FTP_USER --passwd $FTP_PASSWD ftpes://$FTP_SERVER
               - lftp -e 'rm -r /tmp/cache; rm -r /log; mkdir -p /log; bye' -u $FTP_USER,$FTP_PASSWD $FTP_SERVER
-
-      init_testing:
-        - step:
-            script:
-              - apt-get update
-              - git ftp init --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://$FTP_SERVER_TEST
-              - lftp -e 'rm -r /tmp/cache; rm -r /log; mkdir -p /log; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
