Attendance - new part with presenter, service, views and test

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -123,6 +123,7 @@ services:
 	- App\Model\UserService
 	- App\Model\DokumentyService(%google.driveDir%)
 	- App\Model\IdokladService(%idoklad.credentialsFile%)
+	- App\Model\AttendanceService
 	- App\Model\AnketyService
 	- App\Model\RatingService
 	- App\Model\BillingService
