All .htaccess files removed, gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -52,12 +52,9 @@ google_api_service.json
 composer.lock
 .idea
 tests/_temp/
-www/subdom/
-www/front/
-www/backup/
-www/vzsjablonec/albums/
-www/vzsjablonec/archive.zip
-www/vzsjablonec/doc/
-www/vzsjablonec/img/photos/
-www/vzsjablonec/img/upload/
-www/vzsjablonec/texyla/temp/
+www/albums/
+www/archive.zip
+www/doc/
+www/img/photos/
+www/img/upload/
+www/texyla/temp/
