Latte update - change filter loader and escape strings

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -170,7 +170,7 @@ services:
 
 	nette.latteFactory:
 		setup:
-			- addFilter(null, App\Template\LatteFilters::loader)
+			- addFilterLoader([App\Template\LatteFilters(), loader])
 
 	nette.mailer:
 		class: Nette\Mail\IMailer
