Add membership fee command and membership fee value to database

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -214,6 +214,7 @@ services:
 	- App\Console\MessageCommand(%mail%, %messenger%, %wwwDir%)
 	- App\Console\PeopleCommand
 	- App\Console\YoutubeCommand(%google.youtube.channel%)
+	- App\Console\MembershipFeesCommand(clientId: %idoklad.clientId%, clientSecret: %idoklad.clientSecret%)
 
 	googleClient:
 		class: Google_Client
