Service records - make access for members

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -118,7 +118,7 @@ parameters:
 			title: 'služba'
 			action: 'ServiceRecord:'
 			current: 'ServiceRecord:*'
-			role: board
+			role: member
 			icon: life-bouy
 		messages:
 			title: 'zprávy'
