--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -207,6 +207,7 @@ services:
 	- App\Model\DokumentyService
 	- App\Model\IdokladService(%idoklad.credentialsFile%, %idoklad.memberNumericSequence%)
 	- App\Model\AttendanceService
+	- App\Model\AchievementsService
 	- App\Model\AnketyService
 	- App\Model\RatingService
 	- App\Model\BillingService
