Qualification service and user page

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -214,6 +214,7 @@ services:
 	- App\Model\IdokladService(%idoklad.credentialsFile%, %idoklad.memberNumericSequence%)
 	- App\Model\AttendanceService
 	- App\Model\AchievementsService
+	- App\Model\QualificationService
 	- App\Model\AddressesService
 	- App\Model\AnketyService
 	- App\Model\RatingService
